--- a/css/common.css
+++ b/css/common.css
@@ -56,12 +56,21 @@ td {
     color: #dbd6d6;
 }
 
-.dashboard_content {
+/* .dashboard_content {
     flex: 1;
     padding: 20px;
-}
+} */
 
 .dashboard_content_main {
     background-color: #fff;
     min-height: 500px;
 }
+
+ .custom-modal.modal {
+     background-color: rgba(0, 0, 0, 0.3);
+     /* Adjust the last value (0.3) to control opacity */
+ }
+
+ .custom-modal .modal-backdrop {
+     opacity: 0 !important;
+ }
