--- a/css/common.css
+++ b/css/common.css
@@ -33,7 +33,7 @@ td {
 }
 
 .dashboard_content_container {
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -43,13 +43,14 @@ td {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background: #a59d6d;
+    background-image: linear-gradient(to right, #94ab83, #b9b07f);
+    /* background: #a59d6d; */
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .dashboard_content_topNav a {
     text-decoration: none;
-    color: #dbd6d6;
+    color: #fff8de;
 }
 
 .dashboard_content_main {
